# plstm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
notebooks/: basicTests.ipynb  basic_speed_test.ipynb  geometric_test.ipynb  longrangeLayerTest.ipynb  orthogonalization.ipynb  pLSTM_1d_test.ipynb  pLSTM_2d_test.ipynb  plstm_graph.ipynb  qkvLayerTest.ipynb  testMag1DMatrices.ipynb  testMultiheadLayerNorm.py
src/plstm/: graph.py  nnx_dummy.py  util.py
src/plstm/config/: block_stack.py  blocks.py  convolution.py  dtype.py  graph_block.py  initialization.py  interfaces.py  (+16 more)
tests/: test_config_conversion.py  test_graph.py  test_vision_model_shapes.py
tests/conversion/: test_base.py  test_compositional_module.py  test_custom_module.py  test_norm_conversion.py  test_transformer_block.py
tests/match_frameworks/: test_block_stack.py  test_blocks.py  test_convolution.py  test_drop_path.py  test_initialization.py  test_lm_model.py  test_longrange_transition.py  test_norm.py  test_passthrough_layer.py  test_plstm_1d.py  test_plstm_1d_layer.py  test_plstm_2d.py  test_plstm_2d_fused.py  test_plstm_2d_layer.py  test_query_key_value.py  test_scalar.py  test_source_mark.py  test_vision_model.py  test_vision_util.py
tests/nnx/: test_jax_util.py  test_plstm2d_fused.py  test_plstm_1d_layer_mixed_precision.py  test_plstm_2d_layer_fused_mixed_precision.py  test_plstm_2d_layer_mixed_precision.py  test_scale.py
tests/torch/: test_graph_block.py  test_plstm_2d_torch_fwbw.py  test_plstm_graph.py  test_plstm_graph_layer.py
(+90 files in other folders)
